welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:126: error: Unmatched closing brace '}' ignored here
           }
           ^PatternPicture:127: error: eof expected but '}' found.
}
^